@@ -1,3 +1,8 @@
+1998-12-23  Harri Porten  <porten@kde.org>
+
+	* runtests.cpp, opener.cpp: fixed FreeBSD compile problem reported by Hans
+	Petter Bieker
+
 1998-12-22  Harri Porten  <porten@kde.org>
 
 	* pppdata.cpp: Give users upgrading from KDE 1.0 instructions how
